splash de 2 segundos

--- a/src/index.html
+++ b/src/index.html
@@ -1,20 +1,20 @@
 <!DOCTYPE html>
-<html lang="es">
-
+<html>
 <head>
-    <title>Obtener lugares cercanos</title>
     <meta charset="utf-8" />
-</head>
-
-<body >
-    <h1>FoodMap</h1>
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <title>Page Title</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+     <link rel="stylesheet" type="text/css" media="screen" href="main.css" /> 
+    <div class='visible' id='capasuperpuesta' >
+        <div >
+        Dentro de esta capa interior es dónde podemos poner una imagen, enlaces, texto, un menú, un vídeo, una lista, un flash... en fin, lo que sea.
+        </div>
+    </div>
     
-    <div id="mapa" style="width: 500px; height: 400px;"> </div>
-    <div id = "name"></div>
-
-    <script type="text/javascript" src="https://maps.google.com/maps/api/js?libraries=places"></script>
-    <script src="app.js"></script>
-
+    <script src="splash.js"></script>
+</head>
+<body>
+    
 </body>
-
 </html>
