modal con datos del restaurante

--- a/src/inde.html
+++ b/src/inde.html
@@ -1,34 +1,85 @@
 <!DOCTYPE html>
 <html>
-<title>W3.CSS Template</title>
+<title>Let's eat</title>
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
-<link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Lato">
-<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
-<style>
-  body {
-    font-family: "Lato", sans-serif
-  }
+<link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Karma">
+<link rel="stylesheet" type="text/css" media="screen" href="style.css" />
 
-  .mySlides {
-    display: none
-  }
-</style>
 
 <body>
-  <div class="w3-container w3-content w3-center w3-padding-64" style="max-width:800px" id="band">
-    <h1 class="w3-wide">Lest eat</h2> 
-      <div class="w3-green" id="tour">
-        <div class="w3-container w3-content w3-padding-64" id="restauranOption">
-        </div>
-
-      </div>
 
 
+  <!-- Top menu -->
+  <div class="w3-top">
+    <div class="w3-green w3-xlarge" style="max-width:1200px;margin:auto">
 
 
+      <div class="w3-center w3-padding-16">Let's eat</div>
+    </div>
   </div>
+
+  <!-- !PAGE CONTENT! -->
+  <div class="w3-main w3-content w3-padding" style="max-width:1200px;margin-top:100px">
+
+
+    <!-- About Section -->
+    <div class="w3-container w3-padding-32 w3-center">
+      <h3>About Me, The Food Man</h3>
+      <br>
+      <div class="w3-padding-32">
+        <h4>
+          <b>I am Who I Am!</b>
+        </h4>
+        <h6>
+          <i>With Passion For Real, Good Food</i>
+        </h6>
+        <p>Just me, myself and I, exploring the universe of unknownment. I have a heart of love and an interest of lorem ipsum
+          and mauris neque quam blog. I want to share my world with you. Praesent tincidunt sed tellus ut rutrum. Sed vitae
+          justo condimentum, porta lectus vitae, ultricies congue gravida diam non fringilla. Praesent tincidunt sed tellus
+          ut rutrum. Sed vitae justo condimentum, porta lectus vitae, ultricies congue gravida diam non fringilla.</p>
+      </div>
+    </div>
+    <hr>
+
+
+    <!-- First Photo Grid-->
+    <div class="w3-row-padding w3-padding-16 w3-center" id="restauranInformation" >
+        <div id="restauranInformations" class="w3-modal" >
+            <div class="w3-modal-content w3-card-4 w3-animate-zoom" style="max-width:600px" >
+           <div id="hola">
+             
+           </div>
+           <button id="closemodal"> close </button>
+           </div>
+          </div>
+   </div>
+
+    
+
+    <!-- <div class="w3-container w3-content w3-center w3-padding-64" style="max-width:800px" id="band">
+      <h1 class="w3-wide">Lest eat</h2>
+        <div class="w3-green" id="tour">
+          <div class="w3-container w3-content w3-padding-64" id="restauranOption">
+          </div>
+        </div>
+        <div id="restauranInformation" class="w3-modal">
+          <div class="w3-modal-content w3-card-4 w3-animate-zoom" style="max-width:600px">
+            <div id="hola">
+
+            </div>
+            <button id="closemodal"> close </button>
+          </div>
+        </div>
+    </div> -->
+
+
+
+
+    <!-- End page content -->
+  </div>
+
 
   <script src="main.js"></script>
 </body>
