--- a/src/index.html
+++ b/src/index.html
@@ -4,23 +4,18 @@
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
-<link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Raleway">    
-<link rel="stylesheet" type="text/css" media="screen" href="main.css" /> 
+<link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Raleway">
+<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+<link rel="stylesheet" type="text/css" media="screen" href="main.css" />
+
 <body>
 
-<div class="bgimg w3-display-container w3-animate-opacity w3-text-black">
-  <div class="w3-display-topleft w3-padding-large w3-xlarge">
-   
+  <div class="w3-content" style="max-width:400px;margin-top:46px">
+    <div class="w3-display-container w3-center">
+      <img src="../restaurantImages/let'seat.jpg" width="100%" >
+    </div>
   </div>
-  <div class="w3-display-middle">
-    <h1 class="w3-jumbo w3-animate-top">Bienvenido a</h1>
-    <hr class="w3-border-grey" style="margin:auto;width:40%">
-    <p class="w3-large w3-center">FoodMAP</p>
-  </div>
-  <!-- <div class="w3-display-bottomleft w3-padding-large">
-    Powered by <a href="https://www.w3schools.com/w3css/default.asp" target="_blank">w3.css</a>
-  </div> -->
-</div>
-    <script src="splash.js"></script>
+   <script src="splash.js"></script> 
 </body>
+
 </html>
