empezando la funcion de filtrar

--- a/src/inde.html
+++ b/src/inde.html
@@ -51,6 +51,7 @@
           <div id="hola">
 
           </div>
+          <div id="adios"></div>
           <button id="closemodal"> close </button>
         </div>
       </div>
