--- a/src/inde.html
+++ b/src/inde.html
@@ -1,38 +1,28 @@
 <!DOCTYPE html>
 <html>
-<title>Let's eat</title>
-<meta charset="UTF-8">
-<meta name="viewport" content="width=device-width, initial-scale=1">
-<link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
-<link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Karma">
-<link rel="stylesheet" type="text/css" media="screen" href="style.css" />
 
+<head>
+  <title>Let's eat</title>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
+  <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Karma">
+  <link rel="stylesheet" type="text/css" media="screen" href="style.css" />
+</head>
 
 <body>
-
-
   <!-- Top menu -->
   <div class="w3-top">
-    <div class="w3-green w3-xlarge" style="max-width:1200px;margin:auto">
-
-
-      <div class="w3-center w3-padding-16">Let's eat</div>
+    <div class="w3-green w3-xlarge" style="max-width:1500px;margin:auto">
+      <div class="w3-center w3-padding-14">Let's eat</div>
     </div>
   </div>
-
   <!-- !PAGE CONTENT! -->
   <div class="w3-main w3-content w3-padding" style="max-width:1200px;margin-top:100px">
-
-
     <!-- About Section -->
     <div class="w3-container w3-padding-32 w3-center">
-      <h3></h3>
-      <br>
-      <div class="w3-padding-32">
+      <div class="w3-padding-10">
         
-        <h4>
-          <i>With Passion For Real, Good Food</i>
-        </h4>
         <h5>Aqui podras encontrar los mejores restaurantes segun tus preferencias.</h5>
       </div>
     </div>
@@ -40,25 +30,35 @@
     <div class="w3-row-padding w3-padding-16 w3-center" id="restauranInformation">
       <select class="w3-select w3-border" name="option" id="filterRestaurant">
         <option value="" disabled selected>Choose your option</option>
-        <option value="Distrito">Distrito</option>
-        <option value="tipo">tipo</option>
-        <option value="horariodeatencion">horario de atencion</option>
-      </select>
-      <select name="" id="option">
-      </select>
-      <div id="restauranInformations" class="w3-modal">
-        <div class="w3-modal-content w3-card-4 w3-animate-zoom" style="max-width:600px">
-          <div id="hola">
+        <option value="Barranco">Barranco</option>
+        <option value="Miraflores">Miraflores</option>
+        <option value="Independencia">Independencia</option>
+        <option value="Comas">Comas</option>
+      </select> 
+   
+      </div> 
 
+      <div >
+        <div id="holaadio">
+        </div>
+        <div class="w3-modal" id="holo" >
+        <div class="w3-modal-content w3-animate-top w3-card-4" >
+          <header class="w3-container w3-blue">
+            <span id="closemodal" class="w3-button w3-display-topright">&times;</span>
+            <h2 id="restauranname"></h2>
+          </header>
+           <div class="w3-container" id="hola">
+    <h2 id="tipoderestaurante">  </h2>
           </div>
-          <div id="adios"></div>
-          <button id="closemodal"> close </button>
+          <footer class="w3-container w3-blue">
+            <p id="restauranlugar"></p>
+          </footer>
         </div>
       </div>
     </div>
+
+    </div>
   </div>
-
-
   <script src="main.js"></script>
 </body>
 
